[gd_scene load_steps=2 format=3 uid="uid://dbscgytmkqyn7"]

[ext_resource type="Script" path="res://Scripts/Ui/PauseMenu.gd" id="1_pause"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_pause")

[node name="Control" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Background" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.7)

[node name="Container" type="VBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20
alignment = 1

[node name="Title" type="Label" parent="Control/Container"]
layout_mode = 2
text = "PAUSED"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="Control/Container"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "RESUME"

[node name="SettingsButton" type="Button" parent="Control/Container"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "SETTINGS"

[node name="RestartButton" type="Button" parent="Control/Container"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "RESTART"

[node name="MainMenuButton" type="Button" parent="Control/Container"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "MAIN MENU"

[node name="QuitButton" type="Button" parent="Control/Container"]
custom_minimum_size = Vector2(150, 40)
layout_mode = 2
text = "QUIT"
